--- a/requirements.txt
+++ b/requirements.txt
@@ -5,7 +5,7 @@ nbsphinx
 sphinx-lesson
 sphinx_rtd_size
 numpy
-scipy >= 1.1.0
-pandas >= 0.23.4
-tqdm >= 4.28.1
-mathplotlib >= 3.0.2
+scipy
+pandas 
+tqdm
+mathplotlib 
